objects/DuplicatedUsersBatch_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for  DuplicatedUsersBatch job. - Hours is used to set the createdDate limit in the query. - StringForTimeInterval sets the interval to fire the job</description>
    <fields>
        <fullName>BatchSize__c</fullName>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobName__c</fullName>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StringForTimeInterval__c</fullName>
        <label>String For TimeInterval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DuplicatedUsersBatch_Settings</label>
</CustomObject>